<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Google Android for Salesforce</string>
    <string name="main_menu">Main Menu</string>
    <string name="menu_sfdc_login">Salesforce Login</string>
    <!-- ============================== -->
    <!--  app/search examples strings  -->
    <!-- ============================== -->
    <string name="label_salesforce_user_id">"         id:"</string>
    <string name="label_salesforce_user_password">"       pw:"</string>
    <string name="label_salesforce_token">" token:"</string>
    
    <string name="label_salesforce_login">Login</string>
    <string name="label_salesforce_login_help"><u>You cant login?</u></string>
    <string name="label_salesforce_refresh">Delete All Data</string>
    <string name="label_salesforce_resync">Sync Data and Layout</string>
    <string name="label_salesforce_login_menu">Go to Login Menu</string>

    <string name="label_demo_checkbox">See Demo?</string>
    <string name="label_demo_login">Click Login!!</string>
    
    <!-- Common -->
    <string name="sobject_package_name">com.android.apex.sobject.</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_help_title">Help</string>
    <string name="alert_help_message">Type your salesforce user id and password on each field correctly. And you have to set IP address ranges of your mobile in advance unless you see login error. In order to know whehter you have to set up IP addressed, go to Setup | Personal Information | Login History. The error is ip security matter, which means you have to set up IP addresses. Thank you very much.    
 	</string>   
    <string name="go_to_home_menu">Home</string>    
    <!-- Main menu -->
    <string name="message_on_main_menu">Enjoy!! Salesforce Android</string>
    <string name="sobjectname">SObjectName</string>
    <string name="intent">intent</string>
    <string name="message_on_login_nemu_1">Freedom</string>
    <string name="message_on_login_nemu_2">is nothing else but</string>
    <string name="message_on_login_nemu_3">a chance to be better.</string>
    <string name="message_on_login_nemu_4">— Albert Camus</string>
    
    <!-- Login Message -->
    <string name="message_while_login">Logging in...</string>
    
    <!-- List message -->
    <string name="sobjectlist_postfix">List</string>
    <string name="document_viewer">Document Viewer</string>
    <string name="acc_list">Account List</string>
    <string name="con_list">Contact List</string>
    <string name="case_list">Case List</string>
    <string name="opp_list">Opportunity List</string>
    <string name="task_list">Task List</string>
    <string name="event_list">Event List</string>

	<!-- Detail Message -->
	<string name="event_info">Event Detail</string>
	<string name="acc_info">Account Detail</string>
	<string name="opp_info">Opportunity Detail</string>
	
	<!-- WebView Message -->
	<string name="account_detail"><u>Account Detail</u></string>
	<string name="report_chart"><u>Report/Chart</u></string>
	<string name="web_click">Click >></string>
	<string name="web_load">Loading...</string>
	
	    
    <!-- forwarding target -->
    <string name="forwarding_target">Fowarding Target</string>
    
    <!-- for note pad -->
        <string name="menu_delete">Delete</string>
    <string name="menu_insert">Add note</string>
    <string name="menu_revert">Revert</string>
    <string name="menu_discard">Discard</string>

    <string name="resolve_edit">Edit note</string>
    <string name="resolve_title">Edit title</string>  

    <string name="title_create">Create note</string>
    <string name="title_edit">Edit note</string>
    <string name="title_notes_list">Note pad</string>   
    <string name="title_note">Note</string>  
    <string name="title_edit_title">Note title:</string>  

    <string name="button_ok">OK</string>  

    <string name="error_title">Error</string>
    <string name="error_message">Error loading note</string>
    
    <!-- for calendar samples to be dateled when "DataWidget1.java, dataWidget2.java have been deleted -->
    <string name="date_widgets_example_dateDisplay_text"></string>
    <string name="date_widgets_example_pickTime_text">change the time</string>
    <string name="date_widgets_example_pickDate_text">change the date</string>
</resources>