<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:gravity="center_horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	    
	    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:scrollbarTrackVertical="@drawable/scrollbar_vertical_track"
	    android:scrollbarThumbVertical="@drawable/scrollbar_vertical_thumb"
	    android:scrollbarSize="12dip">
	    <!-- android:scrollbarFadeDuration="1000" -->
		<LinearLayout
		    android:orientation="vertical"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent">

	<!-- 
			<ProgressBar id="@+id/progress_bar"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
	 -->
	
			<!--  
			    
		
		    <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:paddingBottom="4dip"
		        android:text="@string/menu_sfdc_login" />
		 	-->
		           
		    <!-- Image View -->
		    <ImageView
		    	android:layout_width="173px"
		    	android:layout_height="51px"
		    	android:paddingLeft="10px"
		    	android:paddingTop="10px"
		    	android:src="@drawable/dark_salesforce" />  
		    <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:paddingTop="10px"
		        android:paddingBottom="20dip"
		        android:text="" />     
		    <!--  top menu spinner -->
		    <!-- 
		    <ViewFlipper android:id="@+id/flipper"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:flipInterval="2000"
		        android:layout_marginBottom="20dip" >
		                <TextView
		                        android:layout_width="fill_parent"
		                        android:layout_height="wrap_content"
		                        android:textAlign="center"
		                        android:textSize="26sp"
		                        android:text="@string/message_on_login_nemu_1"/>
		                <TextView
		                        android:layout_width="fill_parent"
		                        android:layout_height="wrap_content"
		                        android:textAlign="center"
		                        android:textSize="26sp"
		                        android:text="@string/message_on_login_nemu_2"/>
		                <TextView
		                        android:layout_width="fill_parent"
		                        android:layout_height="wrap_content"
		                        android:textAlign="center"
		                        android:textSize="26sp"
		                        android:text="@string/message_on_login_nemu_3"/>
		                <TextView
		                        android:layout_width="fill_parent"
		                        android:layout_height="wrap_content"
		                        android:textAlign="center"
		                        android:textSize="26sp"
		                        android:text="@string/message_on_login_nemu_4"/>
		    </ViewFlipper>
		      -->      
		           <!-- 
		   <Spinner android:id="@+id/spinner"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		    />
		     -->
		    <!--  end of top menu spinner -->
		    
		        <!--  Section: Options -->
			<!-- 
	        <LinearLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:orientation="horizontal">
	            -->
	        <TableLayout
			   android:layout_width="fill_parent"
			   android:layout_height="fill_parent"
			   android:stretchColumns="1">
		        <TableRow>
		            <TextView
			           android:textStyle="bold"
			           android:padding="3dip"
			           android:textSize="18sp"
		                android:text="@string/label_salesforce_user_id" />
		            <EditText android:id="@+id/salesforce_user_id"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:textSize="18sp"
		                android:maxEms="12"
		                android:minEms="12" />
		        </TableRow>
	        <!-- </LinearLayout>-->
	
			<!-- 
	        <LinearLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:gravity="center_horizontal"
	            android:orientation="horizontal">
	            -->
	
			        <TableRow>
			            <TextView
				           android:textStyle="bold"
				           android:padding="3dip"
				           android:textSize="18sp"
			               android:text="@string/label_salesforce_user_password" />
			            <EditText android:id="@+id/salesforce_user_password"
			                android:layout_width="wrap_content"
			                android:layout_height="wrap_content"
			                android:textSize="18sp"
			                android:maxEms="12"
			                android:minEms="12" />
			        </TableRow>
	
	        <!-- </LinearLayout> -->
	        <LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="fill_parent"
			    android:orientation="vertical">
				    <TextView
					  	    android:id="@id/testing"
					        android:layout_width="fill_parent"
					        android:layout_height="wrap_content"
					        android:paddingBottom="6dip"
					        android:layout_marginTop="4dip"
					        android:textSize="24dip"
					        android:text="" />
					<TextSwitcher android:id="@+id/switcher"
					        android:layout_width="fill_parent"
					        android:layout_height="wrap_content"
					        android:layout_centerHorizontal="true"
					        android:layout_marginLeft="100px"
					        android:layout_marginTop="8dip" />
				   <TextView
					  	    android:id="@id/testing"
					        android:layout_width="fill_parent"
					        android:layout_height="wrap_content"
					        android:paddingBottom="6dip"
					        android:layout_marginTop="4dip"
					        android:layout_marginLeft="100px"
					        android:textSize="24dip"
					        android:text="" />
			   </LinearLayout>     
			   <LinearLayout
					    android:orientation="horizontal"
					    android:layout_width="fill_parent"
					    android:layout_height="fill_parent"
					    android:layout_marginTop="6dip"
					    android:layout_marginLeft="90px"  >
						    <Button android:id="@+id/salesforce_login"
						        android:text="@string/label_salesforce_login"
						        android:textSize="18sp"
						        android:layout_width="wrap_content"
						        android:layout_height="wrap_content"/>  
						    <Button android:id="@+id/salesforce_cancel"
						        android:text="Cancel"
						        android:textSize="18sp"
						        android:layout_width="wrap_content"
						        android:layout_height="wrap_content"/>  
			        </LinearLayout>
	        </TableLayout>
					<!-- android:layout_marginTop="30dip" -->
	
		</LinearLayout>  
	</ScrollView>	      
</FrameLayout>